# RotiBot

./: .breakpoints  .gitignore  Dockerfile  HowRotiWorks.md  README.md  changelog  data.py  help_information.json  main.py  pyproject.toml  requirements.txt  settings.py
.github/workflows/: deploy.yml  lavalink-update.yml  readme-check.yml
cogs/: debug.py  execute.py  generate.py  help.py  motd.py  music.py  quote.py  settings.py  talkback.py  wikipedia.py
cogs/debug/: debug.py
cogs/execute/: ExecutionEngine.py  execute.py
cogs/generate/: RotiBrain.py  generate.py
cogs/help/: changelog.json  help.py  help_information.json  old_changelog.json
cogs/motd/: motd.py
cogs/music/: music.py
cogs/quotes/: quote.py
cogs/settings/: settings.py
cogs/statistics/: statistics.py  statistics_helpers.py
cogs/talkbacks/: talkback.py
cogs/wiki/: wikipedia.py
cogs/wiz/: wiz.py
database/: bot_state.py  data.py
docs/: LavalinkUpdates.md
k8s/: deployment.yaml  lavalink-deployment.yaml
scripts/: check_plugin_updates.py
unimplemented/: music.py  track.py  wiz.py
utils/: BloomFilter.py  ExecutionEngine.py  RotiBrain.py  RotiUtilities.py  Singleton.py  command_utils.py  logging_config.json
webserver/: index.html  keep_alive.py
